--- a/src/index.html
+++ b/src/index.html
@@ -2,14 +2,19 @@
 <html>
 <head>
   <meta charset="utf-8">
-  <title>ReproUi</title>
-  <base href="/">
+  <meta http-equiv="X-UA-Compatible" content="IE=edge">
+  <title>ECHO-UI</title>
 
   <meta name="viewport" content="width=device-width, initial-scale=1">
+  <base href="/">
   <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
-  <link rel="icon" type="image/x-icon" href="favicon.ico">
+  <!-- <link rel="icon" type="image/x-icon" href="favicon.ico"> -->
+  <link rel="image_src" href="https://s3-us-west-2.amazonaws.com/port-blog/EchoForest.png" / ><!--formatted-->
+  <link rel="icon" href="assets/imgs/echoforest.svg" sizes="32x32" />
+
+
 </head>
 <body>
-  <app-root>Loading...</app-root>
+  <app-root>Beep Boob Beep...</app-root>
 </body>
 </html>
